WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120317
RegExpMatchesArray should not call [[put]]
https://bugs.webkit.org/show_bug.cgi?id=120317
Summary
RegExpMatchesArray should not call [[put]]
Gavin Barraclough
Reported
2013-08-26 10:24:30 PDT
This will call accessors on the JSObject/JSArray prototypes – so adding an accessor or read-only property called index or input to either of these prototypes will result in broken behavior.
Attachments
Fix
(3.89 KB, patch)
2013-08-26 10:26 PDT
,
Gavin Barraclough
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2013-08-26 10:26:38 PDT
Created
attachment 209662
[details]
Fix
Gavin Barraclough
Comment 2
2013-08-26 10:42:07 PDT
Committed revision 154612.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug